// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate simulations-professions-libérales > CIPAV ACRE 1`] = `
"entreprise . chiffre d'affaires: 6733
impôt . montant: undefined
indépendant . cotisations et contributions: 1733
indépendant . rémunération . nette: 5000
indépendant . rémunération . nette . après impôt: 5000
protection sociale . retraite . base: 39
protection sociale . retraite . complémentaire: 22
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV ACRE 2`] = `
"entreprise . chiffre d'affaires: 25783
impôt . montant: undefined
indépendant . cotisations et contributions: 5783
indépendant . rémunération . nette: 20000
indépendant . rémunération . nette . après impôt: 19442
protection sociale . retraite . base: 140
protection sociale . retraite . complémentaire: 87
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV ACRE 3`] = `
"entreprise . chiffre d'affaires: 68541
impôt . montant: undefined
indépendant . cotisations et contributions: 18541
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41393
protection sociale . retraite . base: 347
protection sociale . retraite . complémentaire: 255
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV année incomplète 1`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: undefined
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > CIPAV année incomplète 2`] = `
"entreprise . chiffre d'affaires: 3253
impôt . montant: undefined
indépendant . cotisations et contributions: 1253
indépendant . rémunération . nette: 2000
indépendant . rémunération . nette . après impôt: 2000
protection sociale . retraite . base: 39
protection sociale . retraite . complémentaire: 12
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV année incomplète 3`] = `
"entreprise . chiffre d'affaires: 6733
impôt . montant: undefined
indépendant . cotisations et contributions: 1733
indépendant . rémunération . nette: 5000
indépendant . rémunération . nette . après impôt: 5000
protection sociale . retraite . base: 39
protection sociale . retraite . complémentaire: 22
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV année incomplète 4`] = `
"entreprise . chiffre d'affaires: 13041
impôt . montant: undefined
indépendant . cotisations et contributions: 3041
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000
protection sociale . retraite . base: 71
protection sociale . retraite . complémentaire: 43
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV année incomplète 5`] = `
"entreprise . chiffre d'affaires: 144928
impôt . montant: undefined
indépendant . cotisations et contributions: 44928
indépendant . rémunération . nette: 100000
indépendant . rémunération . nette . après impôt: 73780
protection sociale . retraite . base: 351
protection sociale . retraite . complémentaire: 889
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV année incomplète 6`] = `
"entreprise . chiffre d'affaires: 1273338
impôt . montant: undefined
indépendant . cotisations et contributions: 273338
indépendant . rémunération . nette: 1000000
indépendant . rémunération . nette . après impôt: 528543
protection sociale . retraite . base: 360
protection sociale . retraite . complémentaire: 1532
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV années précédentes 1`] = `
"entreprise . chiffre d'affaires: 86788
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: undefined
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > CIPAV années précédentes 2`] = `
"entreprise . chiffre d'affaires: 71074
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: undefined
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 1`] = `
"entreprise . chiffre d'affaires: 92919
impôt . montant: undefined
indépendant . cotisations et contributions: 32919
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: 48236
protection sociale . retraite . base: 348
protection sociale . retraite . complémentaire: 458
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 2`] = `
"entreprise . chiffre d'affaires: 91875
impôt . montant: undefined
indépendant . cotisations et contributions: 31875
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: 48243
protection sociale . retraite . base: 348
protection sociale . retraite . complémentaire: 448
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 3`] = `
"entreprise . chiffre d'affaires: 91361
impôt . montant: undefined
indépendant . cotisations et contributions: 31361
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: 48246
protection sociale . retraite . base: 463
protection sociale . retraite . complémentaire: 446
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 4`] = `
"entreprise . chiffre d'affaires: 99115
impôt . montant: undefined
indépendant . cotisations et contributions: 39115
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: 48196
protection sociale . retraite . base: 348
protection sociale . retraite . complémentaire: 508
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 5`] = `
"entreprise . chiffre d'affaires: 96207
impôt . montant: undefined
indépendant . cotisations et contributions: 36207
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: 48215
protection sociale . retraite . base: 524
protection sociale . retraite . complémentaire: 484
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 6`] = `
"entreprise . chiffre d'affaires: 2986
impôt . montant: undefined
indépendant . cotisations et contributions: 1986
indépendant . rémunération . nette: 1000
indépendant . rémunération . nette . après impôt: 1000
protection sociale . retraite . base: 79
protection sociale . retraite . complémentaire: 10
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 7`] = `
"entreprise . chiffre d'affaires: 92919
impôt . montant: undefined
indépendant . cotisations et contributions: 32919
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: 48236
protection sociale . retraite . base: 348
protection sociale . retraite . complémentaire: 458
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV exonération incapacité 1`] = `
"entreprise . chiffre d'affaires: 45145
impôt . montant: undefined
indépendant . cotisations et contributions: 5145
indépendant . rémunération . nette: 40000
indépendant . rémunération . nette . après impôt: 34544
protection sociale . retraite . base: 507
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 0"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 1`] = `
"entreprise . chiffre d'affaires: 1411
impôt . montant: undefined
indépendant . cotisations et contributions: 911
indépendant . rémunération . nette: 500
indépendant . rémunération . nette . après impôt: 500
protection sociale . retraite . base: 39
protection sociale . retraite . complémentaire: 2
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 2`] = `
"entreprise . chiffre d'affaires: 2026
impôt . montant: undefined
indépendant . cotisations et contributions: 1026
indépendant . rémunération . nette: 1000
indépendant . rémunération . nette . après impôt: 1000
protection sociale . retraite . base: 39
protection sociale . retraite . complémentaire: 5
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 3`] = `
"entreprise . chiffre d'affaires: 2641
impôt . montant: undefined
indépendant . cotisations et contributions: 1141
indépendant . rémunération . nette: 1500
indépendant . rémunération . nette . après impôt: 1500
protection sociale . retraite . base: 39
protection sociale . retraite . complémentaire: 7
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 4`] = `
"entreprise . chiffre d'affaires: 3253
impôt . montant: undefined
indépendant . cotisations et contributions: 1253
indépendant . rémunération . nette: 2000
indépendant . rémunération . nette . après impôt: 2000
protection sociale . retraite . base: 39
protection sociale . retraite . complémentaire: 12
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 5`] = `
"entreprise . chiffre d'affaires: 6733
impôt . montant: undefined
indépendant . cotisations et contributions: 1733
indépendant . rémunération . nette: 5000
indépendant . rémunération . nette . après impôt: 5000
protection sociale . retraite . base: 39
protection sociale . retraite . complémentaire: 22
protection sociale . retraite . trimestres: 3"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 6`] = `
"entreprise . chiffre d'affaires: 13041
impôt . montant: undefined
indépendant . cotisations et contributions: 3041
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000
protection sociale . retraite . base: 71
protection sociale . retraite . complémentaire: 43
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 7`] = `
"entreprise . chiffre d'affaires: 144928
impôt . montant: undefined
indépendant . cotisations et contributions: 44928
indépendant . rémunération . nette: 100000
indépendant . rémunération . nette . après impôt: 73780
protection sociale . retraite . base: 351
protection sociale . retraite . complémentaire: 889
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 8`] = `
"entreprise . chiffre d'affaires: 1273338
impôt . montant: undefined
indépendant . cotisations et contributions: 273338
indépendant . rémunération . nette: 1000000
indépendant . rémunération . nette . après impôt: 528543
protection sociale . retraite . base: 360
protection sociale . retraite . complémentaire: 1532
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > auxiliaire médical 1`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > auxiliaire médical 2`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > auxiliaire médical 3`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > avocat 1`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > avocat 2`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > expert-comptable 1`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > expert-comptable 2`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > médecin 1`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > médecin 2`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > médecin 3`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > médecin 4`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > médecin 5`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > médecin 6`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > sage-femme 1`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > sage-femme 2`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > sage-femme 3`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > sage-femme 4`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > sage-femme 5`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;

exports[`calculate simulations-professions-libérales > sage-femme 6`] = `
"entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
protection sociale . retraite . base: undefined
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: undefined"
`;
